src/Services/ddServices/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dd-erp
  labels:
    app.kubernetes.io/part-of: dd-erp
